# IASMind

./: .env.example  .gitignore  CHANGELOG_n8n_execution.md  CHANGES.md  CLEANUP_SUMMARY.md  CLIENT_DISCONNECT_FIX.md  CONTRIBUTING  ChatBI元数据优化总结.md  FILE_SERVICE_IMPLEMENTATION.md  IMPLEMENTATION_ARCHITECTURE.md  LLM_OPTIMIZATION_SUMMARY.md  MINIO_CONFIG_MIGRATION.md  MINIO_MIGRATION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.txt  README.md  README_de.md  README_es.md  README_ja.md  README_pt.md  README_ru.md  README_zh.md  conf.yaml.example  cursor_text2sql_prompt.md  data_insight_quickstart.py  docker-compose.yml  env.example  main.py  package.json  pnpm-lock.yaml  pyproject.toml  server.py  test_datasource_server.py  test_delete_kb_with_vectors.py  test_disconnect_detection.py  test_file_ids_api.py  test_icon_update.py  test_redis_checkpointer.py  test_suffix_field.py  (+2 more)
.cursor/rules/: global.mdc  n8n.mdc  python.mdc  typescript.mdc  windows-style-commands.mdc  zh.mdc
docs/: FILE_SERVICE_QUICKSTART.md  MINIO_CONFIG_GUIDE.md  authentication_system_guide.md  chatbot_rag_usage.md  data-analysis-optimization.md  enhanced_chatbot_guide.md  file-management-pagination-guide.md  file-management-testing-guide.md  file_ids_api.md  frontend_params_implementation.md  knowledge_base_integration.md  knowledge_base_selection_integration.md  knowledge_base_usage_guide.md  llm_proxy_guide.md  metadata_vectorization_enhanced_guide.md  metadata_vectorization_guide.md  n8n_execution_index.md  n8n_execution_quick_reference.md  n8n_execution_redesign_summary.md  n8n_execution_result_display.md  n8n_execution_test_scenarios.md  n8n_execution_user_guide.md  n8n_integration_guide.md  n8n_integration_summary.md  n8n_quickstart.md  n8n_webhook_dynamic_path.md  n8n_webhook_execution.md  natural_language_retrieval_process.md  preset-question-knowledge-base-fix.md  react-18-strict-mode-api-calls.md  websocket-vs-sse-analysis.md  中文Embedding模型使用指南.md
docs/sql/: update_random_dates.sql
examples/: metadata_retrieval_demo.py  n8n_api_usage.py
k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml
n8n/database/: create_comfort_letter_history.sql  flight-tables-init.sql
n8n/scripts/: AI_Agent_Tool正确格式-最终版.md  AI_Agent_Tool输出格式说明.md  README.md  compliance_checker.py  compliance_checker_optimized.py  contract_risk_assessment.py  contract_risk_assessment_optimized.py  terms_extractor.py  terms_extractor_optimized.py  test_qa_bot.py  语法修复说明.md  输出类型修复说明.md
n8n/workflow/: API_OUTPUT_EXAMPLE.md  README.md  aviation-fuel-contract-review.json  chat-webhook.json  intelligent-qa-bot-examples.json  intelligent-qa-bot.json  joke-sse.json  mysql-chat.json  优化后的SystemMessage.md  大模型超时优化方案.md  实时航班跟踪与变更警报.json  航班延误 AI 安抚信（中英双语）.json  超时问题快速修复指南.md  问题分析报告.md
scripts/: dev_server.py  fix_data_insights.py  init_database.py  insert_test_data.py  quick_start.py  start_services.py  test_n8n_integration.py
src/: graph.py
src/chatbot/: __init__.py
src/config/: agents.py  configuration.py  redis.py  tools.py
src/data_insight/: __init__.py  chart_generator.py  data_insight_framework.py
src/database/: __init__.py  connection.py  models.py
src/database_analysis/: __init__.py
src/prompts/: chatbot.md  planner_model.py
src/rag/: builder.py  document_tool.py  metadata_milvus.py  milvus.py  retriever.py  splitter_tool.py  vector.py
src/server/: app.py  auth_middleware.py  auth_request.py  auth_service.py  chat_request.py  file_service.py  generator_util.py
src/tools/: retriever.py  search.py
src/utils/: __init__.py  crypto.py  json_utils.py  llm_utils.py  memory.py
src/vmind/: charts.py  package.json
tests/integration/: test_knowledge_base.py  test_knowledge_base_integration.py
web/: .eslintrc.json  Dockerfile  next.config.js  package.json  pnpm-lock.yaml
web/docs/: api-handler-usage.md  brand-rename-summary.md  cascader-filter-feature.md  data-exploration-feature.md  (+2 more)
(+266 files in other folders)
