[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deer-flow"
version = "0.1.0"
description = "DeerFlow project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "markdownify>=1.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "yfinance>=0.2.54",
    "litellm>=1.63.11",
    "json-repair>=0.7.0",
    "jinja2>=3.1.3",
    "duckduckgo-search>=8.0.0",
    "inquirerpy>=0.3.4",
    "arxiv>=2.2.0",
    "mcp>=1.6.0",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-deepseek>=0.1.3",
    "langchain-milvus>=0.2.0",
    "pymilvus[model]",
    "langchain-ollama>=0.2.1",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "python-multipart>=0.0.6",
    "pycryptodome>=3.20.0",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "pillow>=10.0.0",
    "pymysql>=1.1.0",
    "docx2txt>=0.8",
    "chardet>=5.0.0",
    "redis>=6.2.0",
    "redisvl>=0.2.0",
    "langgraph-checkpoint>=0.0.6",
    "langgraph-checkpoint-redis~=0.0.6",
    # 数据洞察框架依赖
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "ruptures>=1.1.9",
    "pymannkendall>=1.4.3",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.59.0",
    "joblib>=1.5.1",
    "kiwisolver>=1.4.8",
    "pyparsing>=3.2.3",
    "threadpoolctl>=3.6.0",
    # MinIO对象存储依赖
    "minio>=7.1.0",
    
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "langgraph-cli[inmem]>=0.2.10",
]




[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
watchdog = "^3.0.0"  # 添加 watchdog 依赖用于高效热部署
uvicorn = {extras = ["standard"], version = "^0.23.2"}  # 使用标准版本包含更多功能
